(Admin-Client): Fixed some name errors in public folder.

--- a/admin-client/public/index.html
+++ b/admin-client/public/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
-    <title>SlipIT</title>
+    <title>SlipIT (Admin)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
