(Admin-Client): Changed Theme Color for Mobile PWA.

--- a/admin-client/public/index.html
+++ b/admin-client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#81d2c7" />
+    <meta name="theme-color" content="#003d53" />
     <meta name="description" content="Admin Client for SlipIT" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
